--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ clap = { version = "4.5.45", features = ["derive"] }
 url = "2.5.7"
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.9.5"
-rocket = { version = "0.5.1", features = ["secrets"] }
-rusqlite = { version = "0.37.0", features = ["bundled"] }
-uuid = { version = "1.18.0", features = ["v4"] }
+rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
+uuid = { version = "1.18.0", features = ["serde", "v4"] }
 rand = "0.9.2"
 base64 = "0.22.1"
 tokio = "1.47.1"
+ts-rs = { version = "11.0.1", features = ["uuid-impl"] }
+rusqlite = { version = "0.37.0", features = ["bundled"] }
