--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ rand = "0.9.2"
 base64 = "0.22.1"
 tokio = "1.47.1"
 ts-rs = { version = "11.0.1", features = ["uuid-impl"] }
-rusqlite = { version = "0.37.0", features = ["bundled"] }
+rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_sqlite"] }
+anyhow = "1.0.99"
+sqlx = { version = "^0.7", features = ["runtime-tokio", "sqlite", "macros"] }
