--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ uuid = { version = "1.18.0", features = ["serde", "v4"] }
 rand = "0.9.2"
 base64 = "0.22.1"
 tokio = "1.47.1"
-ts-rs = { version = "11.0.1", features = ["uuid-impl"] }
+ts-rs = { version = "11.0.1", features = ["no-serde-warnings", "uuid-impl"] }
 rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_sqlite"] }
 anyhow = "1.0.99"
 sqlx = { version = "^0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid"] }
 dotenv = "0.15.0"
+webauthn-rs = { version = "0.5.2", features = ["resident-key-support"] }
+serde_json = "1.0.143"
