--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2024"
 clap = { version = "4.5.45", features = ["derive"] }
 url = "2.5.7"
 serde = { version = "1.0.219", features = ["derive"] }
-toml = "0.9.5"
 rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
 uuid = { version = "1.18.0", features = ["serde", "v4"] }
 rand = "0.9.2"
@@ -18,5 +17,6 @@ rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_sqlite"]
 anyhow = "1.0.99"
 sqlx = { version = "^0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid"] }
 dotenv = "0.15.0"
-webauthn-rs = { version = "0.5.2", features = ["resident-key-support"] }
+webauthn-rs = { version = "0.5.2", features = ["conditional-ui"] }
 serde_json = "1.0.143"
+toml = "0.9.5"
