--- a/www/package.json
+++ b/www/package.json
@@ -9,6 +9,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@github/webauthn-json": "^2.1.1",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
     "@vitejs/plugin-react": "^5.0.1",
