--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tokio = "1.47.1"
 ts-rs = { version = "11.0.1", features = ["no-serde-warnings", "uuid-impl"] }
 rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_sqlite"] }
 anyhow = "1.0.99"
-sqlx = { version = "^0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid"] }
+sqlx = { version = "^0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }
 dotenv = "0.15.0"
 webauthn-rs = { version = "0.5.2", features = ["conditional-ui"] }
 serde_json = "1.0.143"
