--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 clap = { version = "4.5.45", features = ["derive"] }
 url = "2.5.7"
 serde = { version = "1.0.219", features = ["derive"] }
-rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
+rocket = { version = "0.5.1", features = ["json", "uuid"] }
 uuid = { version = "1.18.0", features = ["serde", "v4"] }
 rand = "0.9.2"
 base64 = "0.22.1"
