--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ dotenv = "0.15.0"
 webauthn-rs = { version = "0.5.2", features = ["conditional-ui"] }
 serde_json = "1.0.143"
 bs58 = "0.5.1"
+tokio-util = "0.7.16"
